# ndc-cassandra

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README  README.md  TODO  build-local.sh  build.sh  cli-update-model.sh  cli.sh  cmd.sh  dev.docker-compose.yaml  docker-compose.yaml  flake.nix  maven-v4_0_0.rnc  maven-v4_0_0.rng  pom.xml  rest.txt  schemas.xml  scratch.sql  test.sh
.github/: build.yaml
.github/workflows/: docker-image.yml
.run/: Run ndc-calcite-arrow.run.xml  Run ndc-calcite-csv.run.xml  Run ndc-calcite-file.run.xml  Run ndc-calcite-jdbc.run.xml  Run ndc-test-csv.run.xml  Run ndc-test-file.run.xml  Run ndc-test-jdbc.run.xml  Run ndc-test.run.xml
adapters/arrow/: .env  README.md  dev.local.configuration.json  model.json
adapters/arrow/resources/arrow/: albums.arrow  artists.arrow  employees.arrow  genres.arrow
adapters/cassandra/: dev.local.configuration.json  docker-compose.yaml  model.json  test.sql
adapters/csv/: .env  README.md  build.sh  configuration.json  dev.docker-compose.calcite.yaml  dev.local.configuration.json  docker-compose.calcite.yaml  model.json
adapters/csv/resources/test/: bug.json  bug.yaml  filterable-model.yaml  model-stream-table.yaml  model-with-custom-table.json  model-with-custom-table.yaml  model-with-view.json  model-with-view.yaml  model.json  model.yaml  order-stream-table.json  order-stream-table.yaml  smart.json  smart.yaml
adapters/csv/resources/test/bug/: ARCHERS.json
adapters/db2/: docker-compose.yaml
adapters/file/: .env  .env.local  README.md  configuration.json  dev.docker-compose.file.yaml  dev.local.configuration.json  model.yaml  schema.json
adapters/file/data/arrow/: invoices.arrow  media_types.arrow
adapters/file/data/files/: 2022-cbp-ocean-economy-table.xlsx  ARCHERS.json  WACKY_COLUMN_NAMES.csv  yaml.yaml
adapters/h2/: dev.local.configuration.json  docker-compose.yaml  model.json
adapters/hive/: .env.local  dev.local.configuration.json  model.json  start-hive.sh
adapters/jdbc/: .env  .env.local  README.md  add-connector.sh  build.sh  configuration.json  dev.docker-compose.calcite.yaml  dev.local.configuration.json  docker-compose.calcite.yaml  docker-compose.jdbc.yaml.template  env.template  model-pg.json  model.json  model.yaml  model_test.json  supergraph.template
adapters/kafka/: dev.local.configuration.json  docker-compose.yaml  model.json
adapters/redis/: .env  README.md  model.json
adapters/sybase/: .env  Dockerfile  custom-entrypoint.sh  docker-compose.yaml  model.json
adapters/trino/: docker-compose.yaml  init.sql
adapters/trino/config/: config.properties  jvm.config  node.properties  password.db
adapters/trino/trino_catalog/: postgres.properties
calcite-rs-jni/: .gitignore  README.md  build.sh  pom.xml
calcite-rs-jni/src/main/java/org/kenstott/: AthenaRowCountExample.java  CalciteQuery.java  Main.java  PrintAllVectorsExample.java  SQLiteSqlDialect.java  SQLiteSqlDialectFactory.java  StatementPreparer.java
calcite-rs-jni/src/main/resources/: log4j2.xml
calcite-rs-jni/src/main/resources/calcite/plan/visualizer/: viz-template.html
connector-definition/: configuration.json  model.json
connector-definition/.hasura-connector/: connector-metadata.yaml
crates/calcite-schema/: Cargo.toml
crates/calcite-schema/src/: aggregates.rs  calcite.rs  collections.rs  comparators.rs  configuration.rs  environment.rs  jvm.rs  lib.rs  list_files.rs  metrics.rs  models.rs  scalars.rs  schema.rs  test.rs  version.rs  version5.rs
crates/cli/: Cargo.toml  readme.md
crates/cli/assets/data/arrow/: customers.arrow  invoice_items.arrow  playlist_track.arrow  playlists.arrow  tracks.arrow
crates/cli/assets/data/files/: DATES.csv
crates/cli/assets/models/: model.arrow.json  model.cassandra.json  model.files.json  model.h2.json  model.hive.json  model.json  model.pg.json  model.sqlite.json
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: initialize_tests.rs
crates/cli/tests/snapshots/: initialize_tests__initialize_directory_with_metadata.snap  initialize_tests__initialize_directory_with_metadata_and_release_version.snap
crates/connectors/ndc-calcite/: Cargo.toml  README.md
crates/connectors/ndc-calcite/src/: calcite.rs  capabilities.rs  lib.rs  query.rs  sql.rs
crates/connectors/ndc-calcite/src/connector/: calcite.rs
crates/values/: Cargo.toml
crates/values/src/: is_running_in_container.rs  lib.rs  values.rs
initdb.d-cassandra/: 04_data.cql
ndc-cassandradb/src/main/java/com/hasura/: App.java
scripts/: java_env_jdk.sh  java_env_jre.sh
src/main/java/: module-info.java
src/main/java/com/hasura/: App.java  models.java
src/main/java/io/hasura/: App.java  models.java
src/main/java/io/hasura/ddn/ndc/cassandradb/: CassandraConnectorHandler.java
src/test/java/com/demo/: CustomerServiceTest.java
src/test/java/com/hasura/: AppTest.java
src/test/java/io/hasura/: AppTest.java
