[workspace]
resolver = "2"

package.version = "0.1.4"
package.edition = "2021"
package.license = "Apache-2.0"

members = [
    "crates/cli",
    "crates/connectors/*"
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# disable certain pedantic warnings
doc_markdown = { level = "allow" }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
module_name_repetitions = { level = "allow" }
must_use_candidate = { level = "allow" }
wildcard_imports = { level = "allow" }

[workspace.dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
axum-extra = "0.9.3"
http = "1.1.0"
mime = "0.3.17"
opentelemetry = "0.24.0"
opentelemetry-http = "0.13.0"
opentelemetry-otlp = { version = "0.17.0", features = ["reqwest-client", "gzip-tonic", "tls", "tls-roots", "http-proto"] }
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-zipkin = "0.22.0"
tower-http = { version = "0.5.2", features = ["cors", "trace", "validate-request"] }
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
dotenv = "0.15.0"
once_cell = "1.19.0"
ndc-models = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.5" }
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs.git", tag = "v0.2.2" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.5" }

anyhow = "1"
async-trait = "0.1"
axum = "0.7.5"
axum-test-helper = "0.4.0"
build-data = "0.2"
bytes = "1"
clap = "4"
env_logger = "0.11"
indexmap = "2"
insta = "1"
jsonschema = "0.18.0"
log = "0.4.22"
prometheus = "0.13"
reqwest = "0.11"
schemars = "0.8"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
smol_str = "0.2.2"
tempfile = "3"
test-each = "0.2"
thiserror = "1"
tokio = "1"
tracing = "0.1"
url = "2"
uuid = "1"