[package]
name = "ndc-calcite-values"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ndc-models = { workspace = true }
jni = { version = "0.21.1", features = ["invocation"] }

anyhow = { workspace = true }
# We only use clap for the derive feature.
clap = { workspace = true, features = ["derive", "env"] }
prometheus = {workspace = true }
schemars = { workspace = true, features = ["smol_str", "preserve_order"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
once_cell = "1.19.0"

[dev-dependencies]
jsonschema = { workspace = true }
