[package]
name = "ndc-calcite"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "calcite"
path = "src/lib.rs"

[[bin]]
name = "ndc-calcite"
path = "bin/main.rs"

[features]
default = ["native-tls"]

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dependencies]
ndc-calcite-schema = { path = "../../calcite-schema" }
ndc-calcite-values = { path = "../../values"}
indexmap = {workspace = true}
jni = { workspace = true }
ndc-models = { workspace = true }
ndc-sdk = { workspace = true }
async-trait = { workspace = true}
axum = { workspace = true, features = ["http2"] }
axum-extra = {workspace = true}
bytes = {workspace = true}
clap = { workspace = true, features = ["derive", "env"] }
http = { workspace = true }
mime = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-otlp = { workspace = true, features = ["reqwest-client", "gzip-tonic", "tls", "tls-roots", "http-proto"] }
opentelemetry-semantic-conventions = {workspace = true}
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-zipkin = {workspace = true}
prometheus = {workspace = true}
reqwest = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
thiserror = {workspace = true}
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { workspace = true, features = ["cors", "trace", "validate-request"] }
tracing = {workspace = true}
tracing-opentelemetry = { workspace = true }
tracing-subscriber = {workspace = true, default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
url = {workspace = true}
dotenv = {workspace = true}
once_cell = {workspace = true}
anyhow = {workspace = true}
log = {workspace = true}
env_logger = "0.11.5"
serde_yaml = "0.9.34"

[dev-dependencies]
axum-test-helper = {workspace = true}